src/objects/Twin_Object2__c.object
<CustomObject>
    <fields>
        <fullName>Date_T__c</fullName>
        <label>Date T</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Twin_Object1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Twin Object1</label>
        <referenceTo>Twin_Object1__c</referenceTo>
        <relationshipLabel>Twin Objects2</relationshipLabel>
        <relationshipName>Twin_Objects21</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>txt__c</fullName>
        <label>txt</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Twin Object2</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Twin Object1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Twin Objects2</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>